# sdk-rust

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: per-pr.yml
arch_docs/: sdks_intro.md
arch_docs/diagrams/: README.md
crates/client/: Cargo.toml
crates/client/src/: grpc.rs  lib.rs  options_structs.rs  schedules.rs  workflow_handle.rs
crates/common/: Cargo.toml  build.rs
crates/common-wasm/: Cargo.toml
crates/common-wasm/src/: error.rs  lib.rs
crates/common-wasm/src/data_converters/: failure_converter.rs
crates/macros/src/: lib.rs
crates/protos/: Cargo.toml  build.rs
crates/protos/protos/api_cloud_upstream/: README.md
crates/protos/protos/api_cloud_upstream/temporal/api/cloud/billing/v1/: message.proto
crates/protos/protos/api_cloud_upstream/temporal/api/cloud/cloudservice/v1/: request_response.proto  service.proto
crates/protos/protos/api_cloud_upstream/temporal/api/cloud/identity/v1/: message.proto
crates/protos/protos/testsrv_upstream/: Makefile
crates/protos/src/: lib.rs
crates/protos/src/protos/: mod.rs
crates/sdk/: Cargo.toml  README.md
crates/sdk-core/: Cargo.toml
crates/sdk-core-c-bridge/src/: client.rs
crates/sdk-core/benches/: workflow_replay_bench.rs
crates/sdk-core/tests/: cloud_tests.rs  heavy_tests.rs  manual_tests.rs  wasm_workflow_tests.rs
crates/sdk/examples/: README.md
crates/sdk/src/: activities.rs  error.rs  lib.rs  workflow_future.rs  workflow_registry.rs  workflow_wasm.rs  workflows.rs
crates/workflow/src/: workflow_context.rs
etc/: run-sdk-examples.sh
(+68 files in other folders)
