[package]
name = "temporalio-protos"
version = "0.4.0"
edition = "2024"
authors = ["Temporal Technologies Inc. <sdk@temporal.io>"]
license-file = { workspace = true }
description = "Compiled protobuf definitions for the Temporal Rust SDK"
homepage = "https://temporal.io/"
repository = "https://github.com/temporalio/sdk-core"
keywords = ["temporal", "protobuf"]
categories = ["development-tools"]
exclude = ["protos/*/.github/*"]
links = "temporalio_protos"

[features]
default = []
serde_serialize = []
grpc-clients = ["tonic/channel"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
derive_more = { workspace = true }
http = "1"
prost = { workspace = true }
prost-types = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, default-features = false, features = ["codegen"] }
tonic-prost = { workspace = true }
pbjson = { workspace = true }

[build-dependencies]
prost = { workspace = true }
prost-types = "0.14"
tonic-prost-build = { workspace = true }
pbjson-build = { workspace = true }

[lints]
workspace = true
